docs(workflow): retune the agent workflow for per-block verification
CLAUDE.md becomes the only workflow source (auto-loaded, imports the
handoff). Per task: focused tests + local commit; full build, ABI regen
and both-platform CI run once per block gate. Handoffs split by role
(CONTINUE-TASK.md next work, actual_state.md snapshot); all historical
checkpoints move verbatim to audit/SESSION-HISTORY.md. TODO §0.1 points
to CLAUDE.md with a gate-precedence line; each unfinished work package
gets a gate checkbox. The Linux sandbox JDK-25 scratch copy is automated
by a SessionStart hook and scripts/sandbox-gradle.sh; /next entry
command. No task spec, ID, status or acceptance changed.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01HGGp1eTALgqeg7jQMguNWg